--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         async function getFollowers() {
             const fbPageId = "384119535310580";  
             const instaUserId = "17841404094321565";  
-            const accessToken = "EAAQxZB27i6t0BO22buwYdEWM8MHZBylKnWysZCdizXnbtZAZCxWZCul38k2YOkMBlHnaFPXvp2mEbYIdzYZCyrtMelfq8k6Ht06ibNP9xU9aVD5DTsfKwI11ZAmVkZAnrk8rlBOvAUXynIeBfE4JMO2rToef1VaF1t3QZB0hFKxEiajoZA7W3G4rsE88xb";  
+            const accessToken = "EAAQxZB27i6t0BO05hHHlQ6e43RQhf0HUZBY6FPbmd4WwiIMVfqZBQrTRZCYLr5xujPluUgPNUkVqyblOFUaOTcshimtZCkWLcFOBTWxzW8X8ulmoHt07nmR5fVH3w2Y3Jr9wQl92SKBoZB8ZBZBKRg2OUIrl8EymtFMWANCOhLvOJcZAqZA2sA5hxP6ApuxufsbLcZAmsp2ZAXqz04aNIRBe8RtKMKHoMiAZD
+";  
 
             const fbUrl = `https://graph.facebook.com/v19.0/${fbPageId}?fields=followers_count&access_token=${accessToken}`;
             const igUrl = `https://graph.facebook.com/v19.0/${instaUserId}?fields=followers_count&access_token=${accessToken}`;
